mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
  ports:
  - name: http
    port: 9000
    targetPort: http
    protocol: TCP
